src/other/mico-2.3.12/test/idl/error/case10.idl

/*
 * Duplicate member in union.
 */

union U switch(long) {
  case 1: long a;
  case 2: char a;
};
